--- a/SQL-Injection/views/index.hbs
+++ b/SQL-Injection/views/index.hbs
@@ -83,9 +83,9 @@
     </tr>
     <tr>
         <td>
-            Tabelle löschen
+            Wert löschen
         </td>
-        <td>DROP TABLE tabelle</td>
+        <td>DELETE FROM table_name WHERE condition;</td>
     </tr>
     <tr>
         <td>
